--- a/css/style.css
+++ b/css/style.css
@@ -288,6 +288,50 @@ html:not([data-scroll='0']) header {
     -o-transition: all 0.3s ease-out;
 }
 
+.price_cards {
+    background-color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 200px;
+    margin-bottom: 200px;
+    padding-left: 90px;
+}
+
+.price_cards .card {
+    height: 400px;
+    width: 300px;
+    border-radius: 10px;
+    border-color: goldenrod;
+    margin-right: 50px;
+    box-shadow: 10px 10px 20px lightgray;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.price_cards .card h3 {
+    display: flex;
+    justify-content: center;
+}
+
+.price_cards .card h1 {
+    display: flex;
+    color: darkgoldenrod;
+}
+
+.price_cards .card span {
+    font-size: 25px;
+    color: darkgoldenrod;
+}
+
+.price_cards .card .text {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+ 
 .nav-item a{
     font-size: 12px;
     letter-spacing: 2px;
@@ -1670,4 +1714,26 @@ label {
         padding: 0;
         padding-top: 10px;
     }
+    #about {
+        height: 600px;
+    }
+    .price_cards {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        padding-left: 50px;
+    }
+    .price_cards .card {
+        width: 280px;
+        height: 400px;
+        margin-bottom: 50px;
+    }
+}
+
+@media (min-height: 568px) {
+    .slider-container .carousel-item .display {
+        font-size: 20px;
+        margin-top: 15em;
+    } 
 }
